--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "barryvdh/laravel-ide-helper": "^2.6",
         "encore/laravel-admin": "^1.7",
+        "laravel-admin-ext/multitenancy": "^2.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0"
